<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorPrimary"
            android:text="Quis"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />
        <Button
            android:textSize="@dimen/_14sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/kuis1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/custom_button"
            android:gravity="left"
            android:padding="@dimen/_8sdp"
            android:text="@string/soal_koefisien_konsolidasi"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:textSize="@dimen/_14sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/kuis2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/custom_button"
            android:gravity="left"
            android:padding="@dimen/_8sdp"
            android:text="@string/soal_waktu_proses_konsolidasi"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:textSize="@dimen/_14sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/kuis3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/custom_button"
            android:gravity="left"
            android:padding="@dimen/_8sdp"
            android:text="@string/soal_drainasi_vertikal"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:textSize="@dimen/_14sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/kuis4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/custom_button"
            android:gravity="left"
            android:padding="@dimen/_8sdp"
            android:text="@string/soal_pre_loading_pra_pembebanan"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>