<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorPrimary"
            android:text="@string/konsolidasi_tanah"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

       
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt22"
            android:layout_margin="@dimen/_1sdp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/silabus"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_190sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_64sdp"
                            android:layout_height="@dimen/_64sdp"
                            android:background="@drawable/card_green"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_book" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/silabus"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/silabus_tentang_materi"
                            android:textColor="@color/darkgrey"
                            android:textSize="@dimen/_9sdp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/materi"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_190sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_64sdp"
                            android:layout_height="@dimen/_64sdp"
                            android:background="@drawable/card_green"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_book4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/materi"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/materi_yang_tersedia"
                            android:textColor="@color/darkgrey"
                            android:textSize="@dimen/_9sdp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/quis"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_190sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_64sdp"
                            android:layout_height="@dimen/_64sdp"
                            android:background="@drawable/card_green"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_lightbulb_outline_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/quis"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="Berisi Latihan Soal"
                            android:textColor="@color/darkgrey"
                            android:textSize="@dimen/_9sdp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/profil"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_190sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_64sdp"
                            android:layout_height="@dimen/_64sdp"
                            android:background="@drawable/card_green"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_person_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="Profil"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/berisi_profil_pembuat"
                            android:textColor="@color/darkgrey"
                            android:textSize="@dimen/_9sdp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>